--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -9,7 +9,8 @@
       </div>
       <div class="form-group">
         <label for="description">Description:</label>
-        <input name="description" type="text-area" class="form-control" id="description">
+        <!-- <input name="description" type="text-area" class="form-control" id="description"> -->
+        <textarea class="form-control" name="description" rows="5" id="description" placeholder="Post a description about this product..."></textarea>
       </div>
       <div class="form-group">
         <label for="pricing">Price:</label>
